// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas del useFetchGif Debe de hacer match con el snapshot 1`] = `
<div
  className=""
>
  <h3>
     
    Zelda
     
  </h3>
  <div
    className="card-grid"
  />
</div>
`;

exports[`Pruebas del useFetchGif Debe de mostart items cuando se carguen las imagenes 1`] = `
<div
  className=""
>
  <h3>
     
    Zelda
     
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="algo jeje"
      url="https://localhost:3200/images/photo.jpg"
    />
  </div>
</div>
`;
